fix alignment and optimize logo

--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,6 @@ section {
     width: 100%;
     min-height: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
     z-index: 2;
 }
